# zenu

./: .clangd  .gitignore  .gitmodules  Cargo.toml  Cargo.toml-e  Dockerfile  LICENSE  README.md  cargo_metadata.json  compile_flags.txt  hoge.txt  oneline_json.bash  rust-analyzer.toml  txt.txt
ruml-matrix-cpu-impl/: Cargo.toml
ruml-matrix-cpu-impl/src/: blas.rs  impl_axis_index.rs  impl_index.rs  impl_matrix.rs  lib.rs  matrix.rs  memory.rs
zenu/: Cargo.toml  README.md
zenu-autograd/: Cargo.toml  README.md  rename.sh
zenu-autograd/benches/: conv2d.rs
zenu-autograd/src/: concat.rs  lib.rs
zenu-autograd/src/activation/: relu.rs  sigmoid.rs
zenu-autograd/src/creator/: alloc.rs  from_vec.rs  mod.rs  ones.rs  rand.rs  zeros.rs
zenu-autograd/src/functions/: add.rs  batch_norm.rs  broadcast.rs  clip.rs  conv2d.rs  cosh.rs  div.rs  dropout.rs  exp.rs  flatten.rs  index_axis.rs  log.rs  matmul.rs  mod.rs  mul.rs  pool2d.rs  powf.rs  relu.rs  reshape.rs  rnn.rs  sinh.rs  slice.rs  softmax.rs  stack.rs  sub.rs  sum.rs  sum_to.rs  tanh.rs  transpose.rs
zenu-autograd/src/functions/activation/: mod.rs  relu.rs  sigmoid.rs
zenu-autograd/src/functions/conv2d/: col2im.rs  conv2d_impl.rs  deconv2_impl.rs  im2col.rs  mod.rs  output_shape.rs
zenu-autograd/src/functions/conv2d_/: col2im.rs  deconv2_impl.rs  im2col.rs  mod.rs
zenu-autograd/src/functions/loss/: cross_entropy.rs  mod.rs  mse.rs
zenu-autograd/src/functions/rnn/: cudnn.rs  mod.rs  naive.rs
zenu-autograd/src/loss/: cross_entropy.rs  mod.rs  softmax.rs
zenu-autograd/src/nn/: conv2d.rs  dropout.rs  mod.rs  pool2d.rs
zenu-autograd/src/nn/conv/: conv_with_bias.rs  conv_without_bias.rs  mod.rs
zenu-autograd/src/nn/lstm/: cudnn.rs  mod.rs  naive.rs
zenu-autograd/src/nn/rnn/: cudnn.rs  naive.rs
zenu-autograd/src/nn/rnns/: mod.rs  weights.rs
zenu-autograd/tests/: combined.rs  get_all_test_variable.rs
zenu-compute/core/: CMakeLists.txt
zenu-compute/core/include/: zenu_compute.h  zenu_compute_arithmetic.h  zenu_compute_memory.h  zenu_compute_random.h  zenu_compute_type.h
zenu-compute/core/src/: conv.cpp
zenu-compute/core/tests/: test_arithmetic.cpp  test_random.cpp
zenu-cublas-sys/: Cargo.toml  build.rs  wrapper.h
zenu-cuda/: Cargo.toml
zenu-cuda-driver-sys/: Cargo.toml  build.rs
zenu-cuda-driver-sys/src/: lib.rs
zenu-cuda-kernel-sys/: Cargo.toml  build.rs
zenu-cuda-kernel-sys/kernel/: activations.cu  activations.h  array_array.cu  array_array.h  array_scalar.cu  array_scalar.h  conv2d_bkwd_data.cu  conv2d_bkwd_data.h  element_wise.cu  element_wise.h  kernel.h  memory_access.cu  memory_access.h
zenu-cuda-kernel-sys/src/: lib.rs
zenu-cuda-runtime-sys/: Cargo.toml  build.rs
zenu-cuda-runtime-sys/src/: lib.rs
zenu-cuda/src/: lib.rs
zenu-cuda/src/cublas/: cublas_error.rs  mod.rs
zenu-cuda/src/cudnn/: batch_norm.rs  conv.rs  dropout.rs  error.rs  graph_batchnorm.rs  graph_conv.rs  graph_utils.rs  mod.rs  pooling.rs  rnn.rs
zenu-cuda/src/kernel/: activation.rs  mod.rs
zenu-cuda/src/runtime/: mod.rs  runtime_error.rs
zenu-cudnn-frontend-wrapper-sys/: Cargo.toml  build.rs
zenu-cudnn-frontend-wrapper-sys/cudnn_frontend_wrapper/: .gitignore  .gitmodules  CMakeLists.txt  README.md
zenu-cudnn-frontend-wrapper-sys/cudnn_frontend_wrapper/include/: cudnn_frontend_wrapper.h
zenu-cudnn-frontend-wrapper-sys/cudnn_frontend_wrapper/src/: batchnorm.cpp  batchnorm.h  conv.cpp  conv.h  cudnn_frontend_wrapper.cpp  i_graph_desc.h  utils.cpp
zenu-cudnn-frontend-wrapper-sys/cudnn_frontend_wrapper/tests/: batchnorm.cpp  conv.cpp  helpers.h
zenu-cudnn-frontend-wrapper-sys/src/: lib.rs
zenu-cudnn-frontend-wrapper/cudnn_frontend_wrapper/: CMakeLists.txt
zenu-cudnn-frontend-wrapper/cudnn_frontend_wrapper/docs_trans/: norm.md
zenu-cudnn-frontend-wrapper/cudnn_frontend_wrapper/src/: batchnorm.cpp  conv.cpp  utils.h
zenu-layer/: Cargo.toml  README.md
zenu-layer/src/: lib.rs
zenu-layer/src/layers/: batch_norm.rs  batch_norm_2d.rs  conv2d.rs  dropout.rs  linear.rs  lstm.rs  max_pool_2d.rs  mod.rs  rnn.rs
zenu-macros/: Cargo.toml
zenu-macros/src/: lib.rs
zenu-macros/tests/: include_vector_map_model.rs  multi_parameter_struct.rs  small_case.rs
zenu-matrix/: Cargo.toml  README.md
zenu-matrix/benches/: copy_from_all_matrix.rs  copy_from_im2col_way.rs  copy_from_logic.rs  gemm.rs  im2col_bench.rs  im2col_function.rs  transpose_reshape_im2col.rs
zenu-matrix/src/: blas.rs  concat.rs  cpu_blas.rs  cpu_element_wise.rs  element_wise.rs  gpu_method.rs  impl_ops.rs  impl_serde.rs  lib.rs  matrix.rs  matrix_format.rs  matrix_impl.rs  matrix_iter.rs  memory.rs  memory_impl.rs  memory_pool.rs  num.rs  shape_stride.rs  with_clousers.rs
zenu-matrix/src/constructor/: alloc.rs  from_vec.rs  mod.rs  ones.rs  rand.rs  zeros.rs
zenu-matrix/src/device/: cpu.rs  mod.rs  nvidia.rs
zenu-matrix/src/dim/: dim_dyn.rs  dim_static.rs  mod.rs
zenu-matrix/src/index/: index_dyn_impl.rs  index_impl.rs  mod.rs
zenu-matrix/src/matrix_blas/: copy.rs  dot.rs  gemm.rs  gemv.rs  mod.rs
zenu-matrix/src/memory_pool/: data_ptr.rs  dynamic_buffer.rs  dynamic_pool.rs  mod.rs  static_buffer.rs  static_mem_pool.rs  test.rs
zenu-matrix/src/nn/: batch_norm.rs  col2im.rs  dropout.rs  im2col.rs  mod.rs  pool2d.rs
zenu-matrix/src/operation/: add.rs  add_axis.rs  asum.rs  basic_operations.rs  basic_operations_.rs  broadcast.rs  clip.rs  copy_from.rs  div.rs  dot.rs  exp.rs  log.rs  max.rs  mean.rs  mod.rs  mul.rs  relu.rs  reshape.rs  softmax.rs  split.rs  stack.rs  sub.rs  sum.rs  to_default_stride.rs  transpose.rs  var.rs  zeros.rs
zenu-matrix/src/slice/: dynamic.rs  macro.rs  slice_dim.rs  static_dim_slice.rs
zenu-matrix/tests/: lstm.rs  rnn.rs
zenu-optimizer/: Cargo.toml  README.md
zenu-optimizer/src/: adam.rs  adamw.rs  lib.rs  sgd.rs
zenu-optimizer/tests/: net_test.rs
zenu-test/: Cargo.toml
zenu-test/src/: lib.rs
zenu/examples/: cifar10.rs  install_mnist.py  mnist.py  mnist.rs  mnist_test_labels.txt  mnist_train_labels.txt  resnet.rs
zenu/src/: dataset.rs  dataset_loader.rs  lib.rs  mnist.rs
(+186 files in other folders)
