[workspace]
resolver = "2"
members = [
    "zenu",
    "zenu-autograd", 
    "zenu-cublas-sys", 
    "zenu-cuda", 
    "zenu-cuda-config", 
    "zenu-cuda-driver-sys", 
    "zenu-cuda-kernel-sys", 
    "zenu-cuda-driver-sys", 
    "zenu-cuda-kernel-sys", 
    "zenu-cuda-runtime-sys", 
    "zenu-cudnn-sys",
    "zenu-layer",
    "zenu-matrix", 
    "zenu-test", 
    "zenu-optimizer", 
    "zenu-macros"
]

[workspace.lints.clippy]
pedantic = "warn"

[profile.bench]
debug = true
