[package]
name = "zenu-autograd"
version = "0.1.1"
edition = "2021"
description = "A simple autograd library for learning purposes"
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
rand = "0.8.5"
rand_distr = "0.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
zenu-test = { path = "../zenu-test", version = "0.1.0" }

[[bench]]
name = "conv2d"
harness = false

[profile.bench]
debug = true

[features]
nvidia = ["zenu-matrix/nvidia"]
