[package]
name = "zenu-cublas-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for cuBLAS"
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2.153"

[build-dependencies]
bindgen = "0.69.4"
zenu-cuda-config = { path = "../zenu-cuda-config", version = "0.1.0"}

[lints]
workspace = true
