[package]
name = "zenu-cuda-driver-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[build-dependencies]
bindgen="0.69.4"
zenu-cuda-config = { path = "../zenu-cuda-config", version = "0.1.0"}

[lints]
workspace = true
