[package]
name = "zenu-cuda-driver-sys"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bokutotu/zenu"
description = "Rust bindings for CUDA Driver API"

[dependencies]
libc = "0.2.153"

[build-dependencies]
bindgen="0.69.4"
zenu-cuda-config = { path = "../zenu-cuda-config", version = "0.1.0"}

[lints]
workspace = true
