[package]
name = "zenu-cuda-kernel-sys"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bokutotu/zenu"
license = "MIT"
description = "CUDA kernel bindings for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[build-dependencies]
bindgen = "0.69.4"
cc = "*"

[lints]
workspace = true

[dev-dependencies]
zenu-cuda-runtime-sys = { path = "../zenu-cuda-runtime-sys" }
