[package]
name = "zenu-layer"
version = "0.1.0"
edition = "2021"
description = "A simple neural network layer library."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }

rand = "0.8.5"
rand_distr = "0.4.3"

[lints]
workspace = true
