[package]
name = "zenu-layer"
version = "0.1.0"
edition = "2021"
description = "A simple neural network layer library."
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }

rand = "0.8.5"
rand_distr = "0.4.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"

[dev-dependencies]
zenu-test = { path = "../zenu-test", version = "*" }

serde_json = "*"

[lints]
workspace = true

[profile.bench]
debug = true
