[package]
name = "zenu-macros"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bokutotu/zenu"
license = "MIT"
description = "Procedural macros for Zenu"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
zenu-test = { path = "../zenu-test" }
zenu = { path = "../zenu"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
rand_distr = "0.4.3"


[lib]
proc-macro = true

[lints]
workspace = true
