[package]
name = "zenu-matrix"
version = "0.1.0"
edition = "2021"
description = "Matrix library for ZeNu"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.4.0"
openblas-src = { version = "0.10.8", features = ["system", "cblas"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
criterion = "0.5.1"
serde_json = "1.0.114"
