[package]
name = "zenu-matrix"
version = "0.1.1"
edition = "2021"
description = "Matrix library for ZeNu"
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.4.0"
openblas-src = { version = "0.10.8", features = ["system", "cblas"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }

zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }

[features]
# no-nvidia = []
# default = ["nvidia"]
nvidia = ["zenu-cuda"]

[dev-dependencies]
itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
criterion = "0.5.1"
serde_json = "1.0.114"
zenu-test = { path = "../zenu-test" }

[[bench]]
name = "copy_from_im2col_way"
harness = false

[[bench]]
name = "copy_from_all_matrix"
harness = false

[[bench]]
name = "transpose_reshape_im2col"
harness = false

[[bench]]
name = "im2col_function"
harness = false

[profile.bench]
debug = true

# TODO: integrate to workspace level
[lints.clippy]
print_stdout = "deny"
dbg_macro = "deny"
