[package]
name = "zenu-optimizer"
version = "0.1.0"
edition = "2021"
description = "A simple optimizer for neural networks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
zenu-layer = { path = "../zenu-layer", version = "0.1.0" }

[lints]
workspace = true
