[package]
name = "zenu-optimizer"
version = "0.1.0"
edition = "2021"
description = "A simple optimizer for neural networks"
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.2" }
zenu-autograd = { path = "../zenu-autograd", version = "0.1.2" }
zenu-layer = { path = "../zenu-layer", version = "0.1.1" }

[dev-dependencies]
zenu-test = { path="../zenu-test/" }
zenu = { path="../zenu/"}
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.2"

[lints]
workspace = true

[profile.bench]
debug = true

[features]
nvidia = ["zenu-matrix/nvidia", "zenu-autograd/nvidia", "zenu-layer/nvidia"]
