[package]
name = "zenu-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenu-matrix = { path = "../zenu-matrix" }
zenu-autograd = { path = "../zenu-autograd" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
