[package]
name = "zenu-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bokutotu/zenu"
license = "MIT"
description = "Testing framework for Zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenu-matrix = { version= "0.1.2", path = "../zenu-matrix" }
zenu-autograd = { version="0.1.1", path = "../zenu-autograd" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
