[package]
name = "zenu"
version = "0.1.2"
edition = "2021"
description = "A simple Deep Learning library for Rust"
license = "MIT"
repository = "https://github.com/bokutotu/zenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenu-matrix = { path = "../zenu-matrix", version = "0.1.2" }
zenu-autograd = { path = "../zenu-autograd", version = "0.1.2" }
zenu-layer = { path = "../zenu-layer", version = "0.1.1" }
zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.1" }
zenu-macros = { path = "../zenu-macros", version = "0.1.0" }

reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = { version = "1.0", features = ["zlib"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.3"
tar = "0.4.40"

[dev-dependencies]
zenu-test = { path = "../zenu-test" }

[profile.bench]
debug = true

[features]
nvidia = ["zenu-matrix/nvidia", "zenu-autograd/nvidia", "zenu-layer/nvidia", "zenu-optimizer/nvidia"]
